--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- copyright Doug Wells -->
 <head>
-	<title>An Example Website</title>
+	<title>Master Title (Conflicts w/"Big Trouble Branch")</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
