Stash example - Done with simple.html updates

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- copyright Doug Wells -->
 <head>
-	<title>Big Trouble Branch</title>
+	<title>Updating Title for Stash Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,7 +15,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Note sure what will go here but it will be nice
+			Adding important stuff
 		</p>
 	</main>
 	<footer class="container">
