3 files added after multi stash

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- copyright Doug Wells -->
 <head>
-	<title>Updating Title for Stash Example</title>
+	<title>Multiple Stashes - mod1</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
