Adding changes to humans.txt & simple.html after git stash branch example

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- copyright Doug Wells -->
 <head>
-	<title>Multiple Stashes - mod1</title>
+	<title>Git Stash Branch example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
