Updating for tag 1.2

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- copyright Doug Wells -->
 <head>
-	<title>Git Stash Branch example</title>
+	<title>Updating title for compare example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
